--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     font-weight: normal;
     margin: 0;
     padding: 0;
+    font-family: "Inter", sans-serif;
   }
   
   p {
@@ -48,7 +49,7 @@ body {
     border: none;
     color: white;
     cursor: pointer;
-    font-family: Arial, sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 14px;
     padding: 10px 20px;
   }
