--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
   }
   
   button {
-    background-color: #c3c3c33e;
+    background-color: #43725E;
     border: none;
     color: white;
     cursor: pointer;
@@ -58,4 +58,82 @@ body {
     background-color: #f5f5f5;
     color: #39493D;
   }
+
+  /*--------------------------------------------------------------------------------------*/
+
+  header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    text-align: center;
+    align-items: center;
+    padding: 30px;
+  }
   
+  #menu ul {
+    list-style-type: none; /* enlève les puces */
+    padding: 0;
+    overflow: hidden;
+    background-color: #f5f5f5;
+  }
+  
+  #menu li {
+    float: left; /* affiche les éléments de liste horizontalement */
+  }
+  
+  #menu li a {
+    display: block; /* rend les liens du menu comme des blocs */
+    background-color: #39493D;
+    color: #f5f5f5;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    transition: transform 0.2s; /* ajoute une animation lorsque le style change */
+  }
+  
+  #menu li a:hover {
+    color: white;
+    background-color: #43725E;
+    transform: scale(1.15);
+  }
+  /*-----image text-----*/
+  #image-text{
+    position: relative;
+  }
+
+  #image-text img{
+    opacity: 60%;
+  }
+
+  #image-text p {
+    position: absolute; 
+    top: 50%; left: 50%; 
+    transform: translate(-50%, -50%); 
+    color: white; 
+    text-shadow: 4px 4px 2px rgba(0,0,0,0.6);
+    font-size: 32px;
+    font-weight: 900;
+    padding: 30px;
+    width: 70%;
+    background-color: rgba(255, 255, 255, 0.2);
+    box-shadow: 1px 1px 15px 0px white;
+  }
+
+  /*------Présentation---------*/
+
+  #presentation{
+    border: 1px solid white;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-left: 150px;
+    margin-right: 150px;
+    padding: 15px;
+    text-align: center;
+    white-space: 2px;
+    box-shadow:  1px 2px 10px 0px white;
+    background-color: #43725e50;
+    border-radius: 20px;
+    font-size: large;
+    font-weight: 500;
+    line-height: 40px;
+  }
