--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
   }
   
   button {
-    background-color: #43725E;
+    background-color: #43725eb0;
     border: none;
     color: white;
     cursor: pointer;
@@ -55,8 +55,8 @@ body {
   }
   
   button:hover {
-    background-color: #f5f5f5;
-    color: #39493D;
+    background-color: #f5f5f56d;
+    color: white;
   }
 
   /*--------------------------------------------------------------------------------------*/
