--- a/style.css
+++ b/style.css
@@ -143,8 +143,8 @@ body {
     width: 750px;
     margin-top: 50px;
     margin-bottom: 50px;
-    margin-left: 150px;
-    margin-right: 150px;
+    margin-left: 400px;
+    margin-right: 350px;
     padding: 35px;
     text-align: center;
     white-space: 2px;
@@ -154,6 +154,8 @@ body {
     font-size: large;
     font-weight: 600;
     line-height: 40px;
+    display: flex;
+    justify-content: center;
   }
 
 
@@ -229,6 +231,55 @@ body {
   }
 
   .cadre-image p{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 25px;
+    font-size: large;
+
+  }
+
+  .bloc-image2{
+    display: flex;
+    justify-content: center;
+    margin-left: 300px;
+  }
+
+  .bloc-image2 ul{
+    display: flex;
+    flex-flow: row wrap;
+    margin: 25px;
+  }
+
+  .bloc-image2 li{
+    width: 450px;
+    height: 400px;
+    margin: 25px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .cadre-image2{
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    flex-flow: column wrap;
+
+  }
+
+  .cadre-image2 img{
+    border: 1px solid white;
+    height: 350px;
+    width: 100%;
+    box-shadow:  1px 2px 10px 0px white;
+    border-radius: 5px;
+  }
+
+  .cadre-image2 img:hover{
+    transform: scale(1.12);
+  }
+
+  .cadre-image2 p{
     display: flex;
     flex-direction: row;
     justify-content: center;
